# technical-cookbooks

./: .gitignore  README.md  jupytext.toml  pyproject.toml  requirements.txt  tree.txt
cookbooks/python/: 001-example-cookbook.py
cookbooks/sql/: 001-sql-practice-problems-sylvia-moestl-vasilik.py
data/processed/sql/: 001-sql-practice-problems-sylvia-moestl-vasilik.sqlite
